bitwarden/network-policy-bitwarden-allow-ingress-from-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bitwarden-allow-ingress-from-traefik
  namespace: bitwarden
spec:
  podSelector:
    matchLabels:
      service: bitwarden
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 8080
